[package]
name = "tgg-limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros", "sync"] }

# serde = { version = "^1.0", features = ["derive"] }
# serde_with = "3.9.0"
anyhow = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }

moka = { version = "= 0.12.10", features = ["future"]}
once_cell = "^1.19.0"