[package]
name = "libtype"
version = "0.1.0"
edition = "2021"

[lib]
name = "libtype"
crate-type = ["rlib"]

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

serde = { version = "^1.0", features = ["derive"] }
serde_with = "3.9.0"
tonic = { version = "= 0.12.3" }
prost = "= 0.13"
anyhow = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }

moka = { version = "= 0.12.10", features = ["future"]}
once_cell = "= 1.21.3"

[build-dependencies]
tonic-build = "= 0.12.3"