[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
serde_yml = { version = "*" }
clap = { version = "= 4.5.9", features = ["derive"] }
anyhow = "1.0.0"

prost = "= 0.13"
tonic = { version = "= 0.12.3" }

libtype = { path = "../libtype" }

[build-dependencies]
tonic-build = "= 0.12.3"